--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <base target="_blank">
   <title>Popup</title>
+  <link rel="stylesheet" href="../style.css" >
 </head>
 <body style="min-width: 100px">
   <div id="app"></div>
