--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css" >
 </head>
 <body style="min-width: 100px">
-  <div id="app"></div>
+  <div id="root"></div>
   <script src="./index.ts"></script>
 </body>
 </html>
